# RustService

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  context7.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  (+1 more)
docs/: adding-services.md  agent-system.md  animations.md
plans/: agent-file-handling.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  energy-report.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: agent.rs  bluescreen.rs  data_dir.rs  disk_health.rs  event_log.rs  mod.rs  network.rs  network_diagnostics.rs  programs.rs  required_programs.rs  restore_points.rs  scripts.rs  services.rs  settings.rs  shortcuts.rs  startup.rs  system_info.rs  time_tracking.rs  utils.rs
src-tauri/src/commands/agent/: attachments.rs  commands.rs  conversations.rs  files.rs  memory.rs  mod.rs  search.rs
src-tauri/src/mcp/: handlers.rs  mod.rs  server.rs  tools.rs
src-tauri/src/services/: adwcleaner.rs  battery_info.rs  battery_report.rs  bleachbit.rs  chkdsk.rs  disk_space.rs  dism.rs  drivecleanup.rs  driver_audit.rs  energy_report.rs  furmark.rs  heavyload.rs  installed_software.rs  iperf.rs  kvrt_scan.rs  mod.rs  network_config.rs  ping_test.rs  restore_point.rs  sfc.rs  smartctl.rs  speedtest.rs  startup_optimize.rs  stinger.rs  usb_stability.rs  whynotwin11.rs  windows_update.rs  winsat.rs
src-tauri/src/types/: agent.rs  mod.rs  program.rs  required_program.rs  script.rs  service.rs  settings.rs  system_info.rs  time_tracking.rs
(+165 files in other folders)
